增加其他几个api接口
